# MSD

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  build.gradle.kts  deny.toml  settings.gradle.kts
.github/workflows/: ci.yml  deny.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/module/: boot_common.sh  customize.sh  patch-plat_seapp_contexts.sh  post-fs-data.sh  service.sh  update-binary
app/module/updates/release/: changelog.txt  info.json
app/src/main/: AndroidManifest.xml
app/src/main/java/com/chiller3/msd/: MainApplication.kt  Preferences.kt
app/src/main/java/com/chiller3/msd/daemon/: Client.kt  Message.kt
app/src/main/java/com/chiller3/msd/dialog/: DeviceDialogFragment.kt  ImageSizeDialogFragment.kt  MessageDialogFragment.kt
app/src/main/java/com/chiller3/msd/extension/: ThrowableExtensions.kt  UriExtensions.kt
app/src/main/java/com/chiller3/msd/settings/: CreatePersistentDocument.kt  DeviceDialog.kt  DeviceInfo.kt  ErrorDetailsDialog.kt  ImageSizeDialog.kt  OpenPersistentDocument.kt  SettingsActivity.kt  (+3 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: image_size_dialog.xml  split_switch_preference.xml
app/src/main/res/values/: attrs.xml  strings.xml  strings_notranslate.xml  styles.xml  themes.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/xml/: locales_config.xml  preferences_root.xml
gradle/: libs.versions.toml  verification-metadata.xml
msd-tool/: Cargo.toml
msd-tool/src/: client.rs  daemon.rs  main.rs  message.rs  sepatch.rs  usb.rs  util.rs
(+9 files in other folders)
